[package]
name = "epd"
version = "0.0.2"
authors = ["Andelf <andelf@gmail.com>"]
edition = "2018"
description = "Drivers for EPD(E-Paper Displays), WIP."
documentation = "https://docs.rs/epd"
repository = "https://github.com/andelf/epd"
keywords = ["no-std", "epd", "epaper", "embedded", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "1.0"
# buggy and outdated
embedded-graphics = "0.8"

defmt = "0.3"
